packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/uri_display.stderr
error: fieldless structs or variants are not supported
 --> $DIR/uri_display.rs:9:1
  |
9 | struct Foo1;
  | ^^^^^^^^^^^^
  |
note: error occurred while deriving `UriDisplay`
 --> $DIR/uri_display.rs:5:10
  |
5 | #[derive(UriDisplayQuery)]
  |          ^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs or variants are not supported
  --> $DIR/uri_display.rs:16:1
   |
16 | struct Foo2();
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:12:10
   |
12 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty enums are not supported
  --> $DIR/uri_display.rs:23:1
   |
23 | enum Foo3 { }
   | ^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:19:10
   |
19 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs or variants are not supported
  --> $DIR/uri_display.rs:31:5
   |
31 |     Variant,
   |     ^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:26:10
   |
26 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs or variants must have exactly one field
  --> $DIR/uri_display.rs:39:12
   |
39 | struct Foo5(String, String);
   |            ^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:35:10
   |
35 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/uri_display.rs:47:20
   |
47 |     #[form(field = 123)]
   |                    ^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:42:10
   |
42 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> $DIR/uri_display.rs:55:12
   |
55 | struct Foo7(String, usize);
   |            ^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:52:10
   |
52 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> $DIR/uri_display.rs:61:1
   |
61 | struct Foo8;
   | ^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:58:10
   |
58 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enums are not supported
  --> $DIR/uri_display.rs:67:1
   |
67 | enum Foo9 {  }
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:64:10
   |
64 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/uri_display.rs:73:1
   |
73 | / struct Foo10 {
74 | | //~^ ERROR not supported
75 | |     named: usize
76 | | }
   | |_^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:70:10
   |
70 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r Foo1`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r mut Foo1`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r Foo2`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r mut Foo2`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r Foo3`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r mut Foo3`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r Foo4`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r mut Foo4`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r Foo5`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r mut Foo5`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r Foo6`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&'__r mut Foo6`
    = note: this error originates in the derive macro `UriDisplayQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo7: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:52:10
    |
52  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo7`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo7: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:52:10
    |
52  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo7`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&'__r Foo7`
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo8: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:58:10
    |
58  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo8`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo8: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:58:10
    |
58  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo8`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&'__r Foo8`
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo9: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:64:10
    |
64  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo9`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo9: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:64:10
    |
64  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo9`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&'__r Foo9`
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo10: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:70:10
    |
70  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo10`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo10: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:70:10
    |
70  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo10`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `rocket::http::uri::FromUriParam::Target`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&'__r Foo10`
    = note: this error originates in the derive macro `UriDisplayPath` (in Nightly builds, run with -Z macro-backtrace for more info)
